--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/Skyline10124/android_kernel_qcom_sm8350
 KERNEL_SOURCE_BRANCH=lineage-20
-KERNEL_CONFIG=vendor/meizu18sPro_defconfig
+KERNEL_CONFIG=vendor/lahaina_QGKI.config
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
