--- a/config.env
+++ b/config.env
@@ -10,16 +10,16 @@ EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=true
+USE_CUSTOM_CLANG=false
 CUSTOM_CLANG_SOURCE=https://github.com/kdrag0n/proton-clang
 CUSTOM_CLANG_BRANCH=master
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
-CUSTOM_CMDS:CROSS_COMPILE=aarch64-linux-gnu-
+CUSTOM_CMDS:TRIPLE_COMPILE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=
-CLANG_VERSION=
+CLANG_BRANCH=android14-release
+CLANG_VERSION=r487747c
 
 # GCC
 ENABLE_GCC_ARM64=true
