--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource
-KERNEL_SOURCE_BRANCH=dagu-s-oss
-KERNEL_CONFIG=vendor/dagu_user_defconfig
+KERNEL_SOURCE=https://github.com/VoidUI-Devices/kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=aosp-14
+KERNEL_CONFIG=vendor/xiaomi/dagu
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
@@ -10,12 +10,12 @@ EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
+USE_CUSTOM_CLANG=true
 CUSTOM_CLANG_SOURCE=https://github.com/kdrag0n/proton-clang
 CUSTOM_CLANG_BRANCH=master
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
-CUSTOM_CMDS:TRIPLE_COMPILE=aarch64-linux-gnu-
+CUSTOM_CMDS:CROSS_COMPILE=aarch64-linux-gnu-
 
 ## AOSP
 CLANG_BRANCH=android14-release
