--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/Rohail33/Realking_kernel_sm8550
-KERNEL_SOURCE_BRANCH=main
-KERNEL_CONFIG=gki_defconfig
+KERNEL_SOURCE=https://github.com/Nanhumly-Staging/android_kernel_xiaomi_msm8998
+KERNEL_SOURCE_BRANCH=lineage-21.0
+KERNEL_CONFIG=sagit_defconfig
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
