--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@ CONFIG_ENV=config.env
 KERNEL_SOURCE=https://github.com/Nanhumly-Staging/android_kernel_xiaomi_msm8998
 KERNEL_SOURCE_BRANCH=lineage-21.0
 KERNEL_CONFIG=sagit_defconfig
-KERNEL_IMAGE_NAME=Image
+KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
